fix: correct pseudo element background position; correct text align

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -59,6 +59,7 @@
                 background-color: rgba(colors.$primary, 0.7);
                 content: '';
                 height: 100vh;
+                left: 0;
                 position: absolute;
                 top: -100vh;
                 width: 100%;
@@ -92,6 +93,7 @@
                         font-weight: 700;
                         margin: 0 5rem;
                         padding: 2rem 0;
+                        text-align: left;
 
                         a {
                             &::after {
